# python-package-github-release-test

./: CHANGELOG.md  README.md  pyproject.toml  release-please-config.json
.github/workflows/: build.yml  commitlint.yml  docs.yml  lint.yml  release-please.yml  test.yml
src/python_package/: __init__.py
tests/: test_template.py
